test/lambda/negative/runtime/test_call_nonfunc.ls
// Test calling a non-function runtime error
let x = 42;
x(1, 2)
